# Smart-Spreadsheet-Platform

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  replit.md  replit.nix
.agents/memory/: MEMORY.md  rich-extractor-fix.md
app/: __init__.py
app/application/auth/: dto.py  service.py
app/application/cleaner/: __init__.py  dto.py  service.py
app/application/converter/: dto.py  engine.py  rich_extractor.py  service.py
app/application/dashboard/: service.py
app/application/files/: __init__.py  dto.py  service.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  i18n.py  logging_config.py  security.py  templates.py
app/infrastructure/database/: models.py
app/infrastructure/repositories/: base.py  file_repository.py  operation_repository.py  server_ping_repository.py  user_repository.py
app/infrastructure/storage/: local_storage.py
app/presentation/api/v1/: auth.py  cleaner.py  converter.py  files.py
app/presentation/web/: __init__.py  admin.py  auth.py  cleaner.py  converter.py  dashboard.py  files.py  logs.py  merger.py  settings.py
attached_assets/: Pasted--Senior-Software-Architect-Python-FastAPI-SaaS--1784218_1784218806031.txt
static/css/: custom.css
static/js/: app.js
templates/: base.html
templates/admin/: index.html
templates/auth/: login.html  register.html
templates/cleaner/: index.html
templates/converter/: index.html
templates/dashboard/: index.html
templates/errors/: error.html
templates/files/: detail.html  index.html
templates/merger/: index.html
templates/settings/: index.html
