[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "arabic-reshaper>=3.0.1",
    "asyncpg>=0.31.0",
    "chardet>=7.4.3",
    "duckdb>=1.5.4",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "fpdf2>=2.8.7",
    "httpx>=0.28.0",
    "humanize>=4.16.0",
    "jinja2>=3.1.6",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-bidi>=0.6.11",
    "python-calamine>=0.8.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "pyxlsb>=1.0.10",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "tabulate>=0.10.0",
    "uvicorn[standard]>=0.51.0",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]
